feat:change struction,best validation 63.5%

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
-    "num_epochs = 50\n",
+    "num_epochs = 400\n",
     "extract_size = 2048\n",
     "class_size = 61\n",
     "\n",
@@ -96,7 +96,7 @@
     "# set the total number of training steps per epoch\n",
     "total_step = int(len(data_loader.dataset)/batch_size)\n",
     "\n",
-    "classify_model = FinalClassify(extract_size, class_size)\n",
+    "classify_model = MultiClassify(extract_size, class_size)\n",
     "classify_model = classify_model.to(device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss().cuda() if torch.cuda.is_available() else nn.CrossEntropyLoss()\n",
@@ -113,21 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [50/50], Step [255/255], Loss: 2.1541"
+      "Epoch [600/400], Step [255/255], Loss: 0.2567"
      ]
     }
    ],
    "source": [
-    "for epoch in range(1, num_epochs+1):\n",
+    "for epoch in range(201, num_epochs+201):\n",
     "    \n",
     "    for i_step in range(1, total_step+1):\n",
     "        \n",
@@ -155,8 +155,9 @@
     "        \n",
     "        print('\\r' + stats, end='')\n",
     "        sys.stdout.flush()\n",
-    "\n",
-    "    torch.save(classify_model.fc.state_dict(), os.path.join('./models', 'class_model_%d.pkl' % epoch))"
+    "    if epoch%50 == 0:\n",
+    "        torch.save(classify_model.state_dict(), os.path.join('./models', 'class_multi_model_%d.pkl' % epoch))\n",
+    "torch.save(classify_model.state_dict(), os.path.join('./models', 'class_multi_model_last.pkl'))"
    ]
   },
   {
@@ -168,17 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoding 4981/4982->99.98%, spent_time:5:59.71"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# valid_data_loader = get_encoder_loader(transform_train, encoder, device, mode='test', batch_size=batch_size)\n",
     "# valid_data_loader.dataset.save_to(\"./bottle_neck/resnet152_valid.h\")\n",
@@ -187,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The final accuracy is 43.86%.\n"
+      "The final accuracy is 63.51%.\n"
      ]
     }
    ],
