feat:increase the acc to 71%

--- a/Export_test_result.ipynb
+++ b/Export_test_result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classify_model = MultiClassify(extract_size, class_size)\n",
+    "classify_model = FinalClassify(extract_size, class_size)\n",
     "classify_model = classify_model.to(device)"
    ]
   },
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classify_model.load_state_dict(torch.load('./models/class_multi_model_last.pkl'))"
+    "classify_model.load_state_dict(torch.load('./models/class_single_model_good.pkl'))"
    ]
   },
   {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>46</td>\n",
+       "      <td>41</td>\n",
        "      <td>138dbeb4e9980b92662475024afebbe1.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -184,11 +184,11 @@
        "0             23  9cd1e21e2d83ec90910ed7796d31d490.jpg\n",
        "1             24             IMG_20180623_181319_1.jpg\n",
        "2             55  12bd98dd14260d3ed0eec183eb0c3b9a.jpg\n",
-       "3             46  138dbeb4e9980b92662475024afebbe1.jpg\n",
+       "3             41  138dbeb4e9980b92662475024afebbe1.jpg\n",
        "4             35  f6af0bfb6b3f38263ade0154d8a87466.jpg"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json('test_result/testA_0920.json', orient=\"records\")"
+    "df.to_json('test_result/testA_0922.json', orient=\"records\")"
    ]
   },
   {
