feat:short of CUDA memory

--- a/Export_test_result.ipynb
+++ b/Export_test_result.ipynb
@@ -19,8 +19,7 @@
     "import torch.utils.data as data\n",
     "from torchvision import transforms\n",
     "\n",
-    "from data_loader import get_loader\n",
-    "from data_loader import get_encoder_loader\n",
+    "from data_loader import *\n",
     "from model import *\n",
     "\n",
     "%matplotlib inline\n",
@@ -40,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extract_size = 2048\n",
+    "extract_size = 1024\n",
     "class_size = 61\n",
     "\n",
     "# 图片格式转化\n",
@@ -63,18 +62,26 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoding 4958/4959->99.98%, spent_time:5:10.85"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# exract the images to embedding tensor\n",
-    "encoder = Encoder()\n",
+    "encoder = EncoderCut()\n",
     "encoder = encoder.to(device)\n",
     "\n",
-    "# test_dataSet = get_test_data(transform_test, encoder, device)\n",
-    "# torch.save(test_dataSet, './bottle_neck/resnet152_test.h')\n",
+    "test_dataSet = get_test_data(transform_test, encoder, device)\n",
+    "torch.save(test_dataSet, './bottle_neck/resnet152_test_cut.pkl')\n",
     "\n",
-    "test_dataSet = torch.load('./bottle_neck/resnet152_test.h')"
+    "# test_dataSet = torch.load('./bottle_neck/resnet152_test_cut.pkl')"
    ]
   },
   {
@@ -90,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classify_model = FinalClassify(extract_size, class_size)\n",
+    "classify_model = MultiClassify(extract_size, class_size)\n",
     "classify_model = classify_model.to(device)"
    ]
   },
@@ -107,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classify_model.load_state_dict(torch.load('./models/class_single_model_good.pkl'))"
+    "classify_model.load_state_dict(torch.load('./models/class_multify_rm1layer_good.pkl'))"
    ]
   },
   {
@@ -162,12 +169,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>55</td>\n",
+       "      <td>45</td>\n",
        "      <td>12bd98dd14260d3ed0eec183eb0c3b9a.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>41</td>\n",
+       "      <td>46</td>\n",
        "      <td>138dbeb4e9980b92662475024afebbe1.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -183,8 +190,8 @@
        "   disease_class                              image_id\n",
        "0             23  9cd1e21e2d83ec90910ed7796d31d490.jpg\n",
        "1             24             IMG_20180623_181319_1.jpg\n",
-       "2             55  12bd98dd14260d3ed0eec183eb0c3b9a.jpg\n",
-       "3             41  138dbeb4e9980b92662475024afebbe1.jpg\n",
+       "2             45  12bd98dd14260d3ed0eec183eb0c3b9a.jpg\n",
+       "3             46  138dbeb4e9980b92662475024afebbe1.jpg\n",
        "4             35  f6af0bfb6b3f38263ade0154d8a87466.jpg"
       ]
      },
@@ -205,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json('test_result/testA_0922.json', orient=\"records\")"
+    "df.to_json('test_result/testA_0923.json', orient=\"records\")"
    ]
   },
   {
