feat:finetune models

--- a/TrainModel_findtune_last_conv.ipynb
+++ b/TrainModel_findtune_last_conv.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,32 +82,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘./bottle_neck/resnet152_train_clear_remove_last_conv’: File exists\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!mkdir ./bottle_neck/resnet152_train_clear_remove_last_conv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoding 32738/32739->100.00%, spent_time:52:54.24"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
@@ -117,7 +92,10 @@
     "encoder = encoder.to(device)\n",
     "\n",
     "fileFold = './bottle_neck/resnet152_train_clear_remove_last_conv'\n",
-    "data_loader = get_encoder_loader_fold(transform_vaild, encoder, device, fileFold, load=True, mode='train', batch_size=batch_size)"
+    "data_loader = get_encoder_loader_fold(transform_vaild, encoder, device, fileFold, load=False, mode='train', batch_size=batch_size)\n",
+    "\n",
+    "validFileFold = './bottle_neck/resnet152_valid_clear_remove_last_conv'\n",
+    "valid_data_loader = get_encoder_loader_fold(transform_vaild, encoder, device, validFileFold, load=False, mode='valid', batch_size=batch_size)"
    ]
   },
   {
@@ -136,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,39 +173,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50], Step [126/127], Loss: 0.4349, Accuracy: 83.20%, Best_acc: 85.16%            \n",
-      " Epoch 1, spent time:368.27s\n",
-      "Epoch [2/50], Step [126/127], Loss: 0.2305, Accuracy: 92.58%, Best_acc: 93.75%            \n",
-      " Epoch 2, spent time:324.95s\n",
-      "Epoch [3/50], Step [126/127], Loss: 0.1583, Accuracy: 94.53%, Best_acc: 96.88%            \n",
-      " Epoch 3, spent time:261.60s\n",
-      "Epoch [4/50], Step [126/127], Loss: 0.0720, Accuracy: 97.27%, Best_acc: 99.22%            \n",
-      " Epoch 4, spent time:230.23s\n",
-      "Epoch [5/50], Step [126/127], Loss: 0.0742, Accuracy: 96.48%, Best_acc: 99.61%            \n",
-      " Epoch 5, spent time:188.45s\n",
-      "Epoch [6/50], Step [126/127], Loss: 0.0447, Accuracy: 98.83%, Best_acc: 99.61%            \n",
-      " Epoch 6, spent time:152.69s\n",
-      "Epoch [7/50], Step [126/127], Loss: 0.0430, Accuracy: 98.44%, Best_acc: 100.00%             \n",
-      " Epoch 7, spent time:139.02s\n",
-      "Epoch [8/50], Step [126/127], Loss: 0.0323, Accuracy: 98.83%, Best_acc: 100.00%             \n",
-      " Epoch 8, spent time:135.37s\n",
-      "Epoch [9/50], Step [126/127], Loss: 0.0292, Accuracy: 99.22%, Best_acc: 100.00%             \n",
-      " Epoch 9, spent time:132.96s\n",
-      "Epoch [10/50], Step [126/127], Loss: 0.1199, Accuracy: 95.70%, Best_acc: 100.00%             \n",
-      " Epoch 10, spent time:132.29s\n",
-      "Epoch [11/50], Step [126/127], Loss: 0.0192, Accuracy: 99.61%, Best_acc: 100.00%            \n",
-      " Epoch 11, spent time:293.21s\n",
-      "Epoch [12/50], Step [126/127], Loss: 0.0604, Accuracy: 98.44%, Best_acc: 100.00%            \n",
-      " Epoch 12, spent time:304.44s\n",
-      "Epoch [13/50], Step [112/127], Loss: 0.0504, Accuracy: 98.44%, Best_acc: 100.00%            "
+      " 4981 / 4982, Step [126/127], Loss: 0.3914, Accuracy: 86.33%, Best_acc: 86.33%            \n",
+      " Epoch 1, spent time:1993.29s, valid: 63.89\n",
+      " 4981 / 4982, Step [126/127], Loss: 0.2606, Accuracy: 90.23%, Best_acc: 91.02%            \n",
+      " Epoch 2, spent time:859.37s, valid: 64.01\n",
+      "Epoch [3/50], Step [20/127], Loss: 0.2107, Accuracy: 93.36%, Best_acc: 94.53%            "
      ]
     }
    ],
    "source": [
-    "classify_model = classify_model.train()\n",
     "best_acc = 0\n",
     "\n",
     "for epoch in range(1, num_epochs+1):\n",
+    "    classify_model = classify_model.train()\n",
     "    start = time.time()\n",
     "    for i_step in range(1, total_step+1):\n",
     "        \n",
@@ -261,10 +219,12 @@
     "            ' % (epoch, num_epochs, i_step, total_step, loss.item(), accuracy, best_acc)\n",
     "            print('\\r' + stats, end='')\n",
     "            sys.stdout.flush()\n",
-    "    print('\\n Epoch {}, spent time:{:.2f}s'.format(epoch, time.time()-start))       \n",
-    "    if epoch%10 == 0:\n",
+    "    \n",
+    "    valid_acc = valid_class_acc(classify_model, valid_data_loader)\n",
+    "    print('\\n Epoch {}, spent time:{:.2f}s, valid: {:.2f}%'.format(epoch, time.time()-start, valid_acc))       \n",
+    "    if epoch%1 == 0:\n",
     "        torch.save(classify_model.state_dict(), os.path.join('./models', 'class_train_last_conv_layer_%d.pkl' % epoch))\n",
-    "torch.save(classify_model.state_dict(), os.path.join('./models', 'class_train_last_conv_layer_last.pkl'))"
+    "# torch.save(classify_model.state_dict(), os.path.join('./models', 'class_train_last_conv_layer_last.pkl'))"
    ]
   },
   {
@@ -304,45 +264,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "4982",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-f75ba03f4cea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclassify_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassify_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0membed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvalid_data_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassify_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpredict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/corn_disease_detection/data_loader.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m         \u001b[0membed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindexs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'embed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    120\u001b[0m         \u001b[0membed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0membed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindexs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'disease_class'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    601\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    602\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 603\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    604\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    605\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   2167\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2168\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 2169\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   2170\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2171\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_value (pandas/index.c:3557)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_value (pandas/index.c:3240)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_loc (pandas/index.c:4279)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/src/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas.hashtable.Int64HashTable.get_item (pandas/hashtable.c:8564)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/src/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas.hashtable.Int64HashTable.get_item (pandas/hashtable.c:8508)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 4982"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "classify_model = classify_model.eval()\n",
-    "predict = []\n",
-    "total = len(valid_data_loader.dataset)\n",
-    "for idx in range(total):\n",
-    "    embed, _ = valid_data_loader.dataset[idx]\n",
-    "    p = classify_model(embed).argmax().item()\n",
-    "    predict.append(p)\n",
-    "    print('\\r %d / %d' % (idx, total), end='')\n",
-    "    sys.stdout.flush()\n",
+    "def valid_class_acc(classify_model, valid_data_loader):\n",
+    "    classify_model = classify_model.eval()\n",
+    "    predict = []\n",
+    "    total = len(valid_data_loader.dataset)\n",
+    "    for idx in range(total):\n",
+    "        embed, _ = valid_data_loader.dataset[idx]\n",
+    "        p = classify_model(embed).argmax().item()\n",
+    "        predict.append(p)\n",
+    "        print('\\r %d / %d' % (idx, total), end='')\n",
+    "        sys.stdout.flush()\n",
     "    \n",
-    "df_refer = valid_data_loader.dataset.refer\n",
-    "df_refer[\"predict\"] = predict\n",
-    "df_refer['correct'] = df_refer.predict == df_refer.disease_class\n",
-    "accuracy = (df_refer.correct == True).sum()/len(df_refer)\n",
-    "print('The final accuracy is %.2f%%.' % (accuracy*100))"
+    "    df_refer = valid_data_loader.dataset.refer\n",
+    "    df_refer[\"predict\"] = predict\n",
+    "    df_refer['correct'] = df_refer.predict == df_refer.disease_class\n",
+    "    accuracy = (df_refer.correct == True).sum()/len(df_refer)\n",
+    "    return accuracy*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The final accuracy is %.2f' % valid_class_acc(classify_model, valid_data_loader))"
    ]
   },
   {
