feat:train with a new conv class,not good

--- a/TrainModel_findtune_last_conv.ipynb
+++ b/TrainModel_findtune_last_conv.ipynb
@@ -248,7 +248,37 @@
       " Epoch 9, spent time:320.46s, valid: 72.48%\n",
       " 4981 / 4982], Step [126/127], Loss: 0.8656, Accuracy: 71.48%, Best_acc: 76.17%            \n",
       " Epoch 10, spent time:309.17s, valid: 71.56%\n",
-      "Epoch [11/50], Step [108/127], Loss: 0.9308, Accuracy: 62.50%, Best_acc: 76.17%            "
+      " 4981 / 4982], Step [126/127], Loss: 0.9334, Accuracy: 67.97%, Best_acc: 76.17%            \n",
+      " Epoch 11, spent time:317.99s, valid: 72.72%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.8210, Accuracy: 72.27%, Best_acc: 76.56%            \n",
+      " Epoch 12, spent time:363.16s, valid: 72.58%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7148, Accuracy: 72.27%, Best_acc: 79.30%            \n",
+      " Epoch 13, spent time:327.91s, valid: 71.84%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.8074, Accuracy: 69.92%, Best_acc: 79.30%            \n",
+      " Epoch 14, spent time:308.74s, valid: 72.48%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7321, Accuracy: 74.22%, Best_acc: 79.30%            \n",
+      " Epoch 15, spent time:305.74s, valid: 72.52%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.8293, Accuracy: 67.19%, Best_acc: 79.30%            \n",
+      " Epoch 16, spent time:319.55s, valid: 72.74%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7626, Accuracy: 67.97%, Best_acc: 79.30%            \n",
+      " Epoch 17, spent time:291.87s, valid: 73.30%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7512, Accuracy: 73.05%, Best_acc: 79.30%            \n",
+      " Epoch 18, spent time:278.38s, valid: 71.92%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.6272, Accuracy: 76.17%, Best_acc: 80.47%            \n",
+      " Epoch 19, spent time:280.60s, valid: 72.58%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7466, Accuracy: 75.00%, Best_acc: 80.47%            \n",
+      " Epoch 20, spent time:291.00s, valid: 72.14%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7059, Accuracy: 76.95%, Best_acc: 82.42%            \n",
+      " Epoch 21, spent time:292.58s, valid: 72.66%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7159, Accuracy: 74.22%, Best_acc: 82.42%            \n",
+      " Epoch 22, spent time:281.81s, valid: 72.74%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.6567, Accuracy: 73.83%, Best_acc: 82.42%            \n",
+      " Epoch 23, spent time:267.68s, valid: 73.32%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.7397, Accuracy: 73.44%, Best_acc: 83.98%            \n",
+      " Epoch 24, spent time:277.07s, valid: 72.20%\n",
+      " 4981 / 4982], Step [126/127], Loss: 0.5798, Accuracy: 79.30%, Best_acc: 83.98%            \n",
+      " Epoch 25, spent time:276.31s, valid: 71.72%\n",
+      "Epoch [26/50], Step [2/127], Loss: 0.7150, Accuracy: 74.61%, Best_acc: 83.98%            "
      ]
     }
    ],
